<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.SplashActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/theme_one">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dimen_30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_8dp"
                android:orientation="vertical"
                android:padding="@dimen/dimen_10dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:padding="@dimen/dimen_4dp"
                    android:src="@drawable/virtuo_circle_logo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/dimen_10dp"
                    android:fontFamily="@font/elmessiri_regular"
                    android:gravity="center"
                    android:padding="@dimen/dimen_4dp"
                    android:text="@string/permissionText"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/white"
                    android:textSize="@dimen/dimen_20sp" />


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_4dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_gravity="center"
                            app:tint="@color/white"
                            app:srcCompat="@drawable/pin" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="10dp"
                            android:layout_marginLeft="10dp"
                            android:orientation="vertical"
                            android:padding="@dimen/dimen_4dp">

                            <TextView
                                android:layout_width="wrap_content"

                                android:layout_height="wrap_content"
                                android:fontFamily="@font/muli_bold"
                                android:text="@string/location"
                                android:textColor="@color/white"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"

                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:fontFamily="@font/elmessiri_regular"
                                android:text="@string/location_txt"
                                android:textColor="@color/white" />
                        </LinearLayout>
                    </LinearLayout>


                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_4dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="@dimen/dp_25"
                            android:layout_height="@dimen/dp_25"
                            android:layout_gravity="center"
                            app:tint="@color/white"
                            app:srcCompat="@drawable/photo" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="10dp"
                            android:layout_marginLeft="10dp"
                            android:orientation="vertical"
                            android:padding="@dimen/dimen_4dp">

                            <TextView
                                android:layout_width="wrap_content"

                                android:layout_height="wrap_content"
                                android:fontFamily="@font/muli_bold"
                                android:text="@string/camera"
                                android:textColor="@color/white"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"

                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:fontFamily="@font/elmessiri_regular"
                                android:text="@string/camera_txt"
                                android:textColor="@color/white" />
                        </LinearLayout>
                    </LinearLayout>


                </RelativeLayout>

                <Button
                    android:id="@+id/accept"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="@dimen/dimen_30dp"
                    android:layout_marginEnd="@dimen/dimen_30dp"
                    android:layout_marginRight="@dimen/dimen_30dp"
                    android:background="@color/white"
                    android:fontFamily="@font/elmessiri_regular"
                    android:padding="@dimen/dimen_10dp"
                    android:text="@string/accept"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:backgroundTint="@color/white" />

            </LinearLayout>
        </ScrollView>


    </RelativeLayout>
</layout>