<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/root_rl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/theme_one"
        android:orientation="vertical">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true">

            <LinearLayout
                android:id="@+id/root"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/dimen_20dp"
                android:layout_marginRight="@dimen/dimen_20dp"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/relativeLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_20dp"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profile_image"
                        android:layout_width="@dimen/_80dp"
                        android:layout_height="@dimen/_80dp"
                        android:layout_centerInParent="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/background_border_stroke"
                        android:padding="1dp"
                        android:src="@drawable/virtuo_circle_logo" />

                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/ll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_10dp"
                    android:layout_marginRight="@dimen/dimen_10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/logged_in"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/muli_bold"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="@dimen/dimen_18sp"
                        android:visibility="visible" />

                    <TextView
                        android:id="@+id/emp_email_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="@dimen/dimen_14sp"
                        android:visibility="visible" />


                    <TextView
                        android:id="@+id/enter_6_digit_otp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_10dp"
                        android:fontFamily="@font/muli_bold"
                        android:gravity="center"
                        android:text="@string/enter_6_digit_otp"
                        android:textColor="@color/black"
                        android:textSize="@dimen/dimen_16sp" />

                    <com.chaos.view.PinView
                        android:id="@+id/firstPinView"
                        style="@style/PinWidget.PinView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:cursorVisible="true"
                        android:hint="@string/app_name"
                        android:inputType="numberPassword"
                        android:itemBackground="@drawable/mpin_background"
                        android:padding="@dimen/dimen_8dp"
                        android:textColor="@color/text_colors"
                        android:textSize="@dimen/dimen_14sp"
                        android:textStyle="bold"
                        app:cursorColor="@color/white"
                        app:cursorWidth="@dimen/dimen_2dp"
                        app:hideLineWhenFilled="true"
                        app:itemCount="6"
                        app:itemHeight="@dimen/dp_50"
                        app:itemRadius="@dimen/dimen_2dp"
                        app:itemSpacing="@dimen/dimen_2dp"
                        app:itemWidth="@dimen/dp_50"
                        app:lineColor="@color/line_colors"
                        app:lineWidth="@dimen/dimen_2dp"
                        app:viewType="rectangle" />

                    <TextView
                        android:id="@+id/tv_resend"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="@dimen/dimen_5dp"
                        android:layout_marginEnd="@dimen/dimen_20dp"
                        android:layout_marginRight="@dimen/dimen_20dp"
                        android:gravity="center"
                        android:text="@string/resend_otp"
                        android:textColor="@color/black"
                        android:textSize="@dimen/dimen_14sp" />


                    <Button
                        android:id="@+id/btn_submit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dimen_30dp"
                        android:layout_marginTop="@dimen/dimen_10dp"
                        android:layout_marginRight="@dimen/dimen_30dp"
                        android:layout_marginBottom="@dimen/dimen_20dp"
                        app:backgroundTint="@color/color1"
                        android:fontFamily="@font/muli_bold"
                        android:gravity="center"
                        android:padding="@dimen/dimen_10dp"
                        android:text="@string/submit"
                        android:textAllCaps="false"
                        android:textSize="@dimen/dimen_18sp" />

                </LinearLayout>


            </LinearLayout>
        </ScrollView>

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/root_cl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/fot_lay"
            android:background="@color/colorAccent" />

        <include
            android:id="@+id/fot_lay"
            layout="@layout/footer_layout_new" />

    </RelativeLayout>
</layout>